--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-
+    <meta name="google-signin-client_id" content="466982579575-pf1nmmrkeahnrt3vmsqaksqpimonpahe.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png" />
     <!-- Bootstrap Core CSS -->
